[project]
name = "leetcode-python"
version = "1.0.0"
description = "CNife's LeetCode solutions with Python"
authors = [
    { name = "CNife", email = "CNife@vip.qq.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "GPL-3.0-or-later" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
