[project]
name = "leetcode-python"
version = "1.0.0"
description = "CNife's LeetCode solutions with Python"
authors = [
    { name = "CNife", email = "CNife@vip.qq.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "GPL-3.0-or-later" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "ipython>=8.12.2",
    "rich>=13.5.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120
target-version = ["py310"]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 120
