[project]
name = "leetcode-python"
version = "1.0.0"
description = "CNife's LeetCode solutions with Python"
authors = [
    { name = "CNife", email = "CNife@vip.qq.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "GPL-3.0-or-later" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "ipython>=8.12.2",
    "rich>=13.5.2",
    "pip>=23.3.1",
    "setuptools>=69.0.2",
    "wheel>=0.42.0",
    "pre-commit>=3.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
src = ["src", "test", "client/src"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".pytest_cache",
    ".data",
    "dist",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "lf"

[tool.ruff.isort]
known-local-folder = ["zjbs_file_client"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.black]
line-length = 120
target-version = ["py310"]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 120
